fix: move the separator a bit to the right to align it with links

--- a/src/components/CategoryList/CategoryList.scss
+++ b/src/components/CategoryList/CategoryList.scss
@@ -57,7 +57,7 @@
 }
 
 .separator {
-  margin: 6px 0;
+  margin: 6px 0 6px 12px;
   background-color: #3e87b2;
   border: 0;
   height: 1px;
